--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-list",
   "version": "0.2.0",
+  "proxy": "https://toodoo.ml",
   "private": true,
   "dependencies": {
     "husky": "^3.0.0",
